[package]
name = "parser_tester_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ref_impl_parser = { path = "../ref_impl_parser" }
rnix_normalize = { path = "../rnix_normalize" }
rnix_ast = { path = "../rnix_ast" }
serde_json = "1.0.82"
assert-json-diff = "2.0.2"
indoc = "1.0.6"
paste = "1.0.7"
clap = { version = "3.2.12", features = ["derive"] }
rnix = { path = "../../../rnix-parser" }
globwalk = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
