cargo-features = ["workspace-inheritance"]

[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ref-impl-parser = { path = "../ref-impl-parser" }
rnix-normalize = { path = "../rnix-normalize" }
rnix-ast = { path = "../rnix-ast" }

rnix = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_stacker = "0.1.5"

assert-json-diff = "2.0.2"
indoc = "1.0.6"
paste = "1.0.7"
clap = { version = "3.2.12", features = ["derive"] }
globwalk = "0.8.1"